--- a/03_controlling_program_flow/index.html
+++ b/03_controlling_program_flow/index.html
@@ -5,6 +5,7 @@
   <title></title>
 </head>
 <body>
-  <script src="js/main.js"></script>
+  <!-- // <script src="js/main.js"></script> -->
+  <script src="js/timers.js"></script>
 </body>
 </html>
