--- a/04_using_javascript/index.html
+++ b/04_using_javascript/index.html
@@ -7,5 +7,6 @@
 <body>
   <script src="js/main.js"></script>
   <script src="js/objects.js"></script>
+  <script src="js/functions.js"></script>
 </body>
 </html>
