--- a/04_using_javascript/index.html
+++ b/04_using_javascript/index.html
@@ -8,5 +8,6 @@
   <script src="js/main.js"></script>
   <script src="js/objects.js"></script>
   <script src="js/functions.js"></script>
+  <script src="js/dates.js"></script>
 </body>
 </html>
