--- a/04_using_javascript/index.html
+++ b/04_using_javascript/index.html
@@ -9,5 +9,6 @@
   <script src="js/objects.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/dates.js"></script>
+  <script src="js/math.js"></script>
 </body>
 </html>
