--- a/05_working_with_the_dom/index.html
+++ b/05_working_with_the_dom/index.html
@@ -8,6 +8,11 @@
   <h1 id="mainHeading">Header</h1>
   <div class="class1 subclass">Div1</div>
   <div class="class1">Div2</div>
+  <div id="div3">
+    <span>
+      Div3
+    </span>
+  </div>
   <script src="js/elements.js"></script>
 </body>
 </html>
