--- a/05_working_with_the_dom/index.html
+++ b/05_working_with_the_dom/index.html
@@ -5,7 +5,9 @@
   <title></title>
 </head>
 <body>
-  <h1 id="mainHeading">Header</h1>
+  <div>
+    <h1 id="mainHeading">Header</h1>
+  </div>
   <div class="class1 subclass">Div1</div>
   <div class="class1">Div2</div>
   <div id="div3">
