--- a/05_working_with_the_dom/index.html
+++ b/05_working_with_the_dom/index.html
@@ -8,13 +8,16 @@
   <div>
     <h1 id="mainHeading">Header</h1>
   </div>
-  <div class="class1 subclass">Div1</div>
-  <div class="class1">Div2</div>
+  <div id="wrapper">
+    <div class="class1 subclass">Div1</div>
+    <div class="class1">Div2</div>
+  </div>
   <div id="div3">
     <span>
       Div3
     </span>
   </div>
   <script src="js/elements.js"></script>
+  <script src="js/events.js"></script>
 </body>
 </html>
