--- a/06_web_apis/index.html
+++ b/06_web_apis/index.html
@@ -14,5 +14,6 @@
     <h2>H2 2</h2>
   </header>
   <script src="js/selectors.js"></script>
+  <script src="js/geolocation.js"></script>
 </body>
 </html>
