--- a/06_web_apis/index.html
+++ b/06_web_apis/index.html
@@ -15,5 +15,6 @@
   </header>
   <script src="js/selectors.js"></script>
   <script src="js/geolocation.js"></script>
+  <script src="js/storage.js"></script>
 </body>
 </html>
