--- a/06_web_apis/index.html
+++ b/06_web_apis/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Index</title>
 </head>
 <body>
   <header>
@@ -13,8 +13,12 @@
   <header>
     <h2>H2 2</h2>
   </header>
+
+  <a href="history.html">History</a>
+
   <script src="js/selectors.js"></script>
   <script src="js/geolocation.js"></script>
   <script src="js/storage.js"></script>
+  <script src="js/history.js"></script>
 </body>
 </html>
