--- a/7_advanced/index.html
+++ b/7_advanced/index.html
@@ -5,7 +5,8 @@
   <title></title>
 </head>
 <body>
-  <script src="js/object_constructor.js"></script>
-  <script src="js/ajax.js"></script>
+  <!-- <script src="js/object_constructor.js"></script> -->
+  <!-- <script src="js/ajax.js"></script> -->
+  <script src="js/regex.js"></script>
 </body>
 </html>
