--- a/7_advanced/index.html
+++ b/7_advanced/index.html
@@ -7,6 +7,7 @@
 <body>
   <!-- <script src="js/object_constructor.js"></script> -->
   <!-- <script src="js/ajax.js"></script> -->
-  <script src="js/regex.js"></script>
+  <!-- <script src="js/regex.js"></script> -->
+  <script src="js/closures.js"></script>
 </body>
 </html>
