--- a/7_advanced/index.html
+++ b/7_advanced/index.html
@@ -8,6 +8,7 @@
   <!-- <script src="js/object_constructor.js"></script> -->
   <!-- <script src="js/ajax.js"></script> -->
   <!-- <script src="js/regex.js"></script> -->
-  <script src="js/closures.js"></script>
+  <!-- <script src="js/closures.js"></script> -->
+  <script src="js/simple_object_inheritance.js"></script>
 </body>
 </html>
