--- a/7_advanced/index.html
+++ b/7_advanced/index.html
@@ -12,6 +12,7 @@
   <!-- <script src="js/simple_object_inheritance.js"></script> -->
   <!-- <script src="js/prototypal_inheritance.js"></script> -->
   <!-- <script src="js/mixins.js"></script> -->
-  <script src="js/module.js"></script>
+  <!-- <script src="js/module.js"></script> -->
+  <script src="js/pubsub.js"></script>
 </body>
 </html>
